[package]
name = "SpaceCraft"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
concurrent-queue = { version = "2.3.0" }
once_cell = { version = "1.18.0" }
rand = { version = "0.8.5" }
noise = "0.9.0"
bevy-inspector-egui = "0.26.0"
